@@ -111,6 +111,140 @@ void DownloadFileHelper::handleUnsupportedContent(QNetworkReply* reply, const Do
     }
 }
 
+// http://stackoverflow.com/questions/1031645/how-to-detect-utf-8-in-plain-c
+static bool isUtf8(const char* string)
+{
+    if (!string) {
+        return 0;
+    }
+
+    const unsigned char* bytes = (const unsigned char*)string;
+    while (*bytes) {
+        if ((// ASCII
+                    bytes[0] == 0x09 ||
+                    bytes[0] == 0x0A ||
+                    bytes[0] == 0x0D ||
+                    (0x20 <= bytes[0] && bytes[0] <= 0x7F)
+                )
+           ) {
+            bytes += 1;
+            continue;
+        }
+
+        if ((// non-overlong 2-byte
+                    (0xC2 <= bytes[0] && bytes[0] <= 0xDF) &&
+                    (0x80 <= bytes[1] && bytes[1] <= 0xBF)
+                )
+           ) {
+            bytes += 2;
+            continue;
+        }
+
+        if ((// excluding overlongs
+                    bytes[0] == 0xE0 &&
+                    (0xA0 <= bytes[1] && bytes[1] <= 0xBF) &&
+                    (0x80 <= bytes[2] && bytes[2] <= 0xBF)
+                ) ||
+                (// straight 3-byte
+                    ((0xE1 <= bytes[0] && bytes[0] <= 0xEC) ||
+                     bytes[0] == 0xEE ||
+                     bytes[0] == 0xEF) &&
+                    (0x80 <= bytes[1] && bytes[1] <= 0xBF) &&
+                    (0x80 <= bytes[2] && bytes[2] <= 0xBF)
+                ) ||
+                (// excluding surrogates
+                    bytes[0] == 0xED &&
+                    (0x80 <= bytes[1] && bytes[1] <= 0x9F) &&
+                    (0x80 <= bytes[2] && bytes[2] <= 0xBF)
+                )
+           ) {
+            bytes += 3;
+            continue;
+        }
+
+        if ((// planes 1-3
+                    bytes[0] == 0xF0 &&
+                    (0x90 <= bytes[1] && bytes[1] <= 0xBF) &&
+                    (0x80 <= bytes[2] && bytes[2] <= 0xBF) &&
+                    (0x80 <= bytes[3] && bytes[3] <= 0xBF)
+                ) ||
+                (// planes 4-15
+                    (0xF1 <= bytes[0] && bytes[0] <= 0xF3) &&
+                    (0x80 <= bytes[1] && bytes[1] <= 0xBF) &&
+                    (0x80 <= bytes[2] && bytes[2] <= 0xBF) &&
+                    (0x80 <= bytes[3] && bytes[3] <= 0xBF)
+                ) ||
+                (// plane 16
+                    bytes[0] == 0xF4 &&
+                    (0x80 <= bytes[1] && bytes[1] <= 0x8F) &&
+                    (0x80 <= bytes[2] && bytes[2] <= 0xBF) &&
+                    (0x80 <= bytes[3] && bytes[3] <= 0xBF)
+                )
+           ) {
+            bytes += 4;
+            continue;
+        }
+
+        return false;
+    }
+
+    return true;
+}
+
+QString DownloadFileHelper::parseContentDisposition(const QByteArray &header)
+{
+    QString path;
+
+    if (header.isEmpty()) {
+        return path;
+    }
+
+    QString value;
+
+    if (isUtf8(header.constData())) {
+        value = QString::fromUtf8(header);
+    }
+    else {
+        value = QString::fromLatin1(header);
+    }
+
+    // We try to use UTF-8 encoded filename first if present
+    if (value.contains(QRegExp("[ ;]{1,}filename*\\*\\s*=\\s*UTF-8''", Qt::CaseInsensitive))) {
+        QRegExp reg("filename\\s*\\*\\s*=\\s*UTF-8''([^;]*)", Qt::CaseInsensitive);
+        reg.indexIn(value);
+        path = QUrl::fromPercentEncoding(reg.cap(1).toUtf8()).trimmed();
+    }
+    else if (value.contains(QRegExp("[ ;]{1,}filename\\s*=", Qt::CaseInsensitive))) {
+        QRegExp reg("[ ;]{1,}filename\\s*=(.*)", Qt::CaseInsensitive);
+        reg.indexIn(value);
+        path = reg.cap(1).trimmed();
+
+        // Parse filename in quotes (to support semicolon inside filename)
+        if (path.startsWith(QLatin1Char('"')) && path.count(QLatin1Char('"')) > 1) {
+            int pos = path.indexOf(QLatin1Char('"'), 1);
+            while (pos != -1) {
+                if (path[pos - 1] != QLatin1Char('\\')) {
+                    // We also need to strip starting quote
+                    path = path.left(pos).mid(1);
+                    break;
+                }
+                pos = path.indexOf(QLatin1Char('"'), pos + 1);
+            }
+        }
+        else {
+            QRegExp reg("([^;]*)", Qt::CaseInsensitive);
+            reg.indexIn(path);
+            path = reg.cap(1).trimmed();
+        }
+
+        if (path.startsWith(QLatin1Char('"')) && path.endsWith(QLatin1Char('"'))) {
+            path = path.mid(1, path.length() - 2);
+        }
+    }
+
+    return path;
+}
+
 void DownloadFileHelper::optionsDialogAccepted(int finish)
 {
     bool forceChoosingPath = false;
@@ -248,26 +382,7 @@ void DownloadFileHelper::fileNameChoosed(const QString &name, bool fileNameAutoG
 
 QString DownloadFileHelper::getFileName(QNetworkReply* reply)
 {
-    QString path;
-    if (reply->hasRawHeader("Content-Disposition")) {
-        QString value = QString::fromLatin1(reply->rawHeader("Content-Disposition"));
-
-        // We try to use UTF-8 encoded filename first if present
-        if (value.contains(QRegExp("filename\\s*\\*\\s*=\\s*UTF-8", Qt::CaseInsensitive))) {
-            QRegExp reg("filename\\s*\\*\\s*=\\s*UTF-8''([^;]*)", Qt::CaseInsensitive);
-            reg.indexIn(value);
-            path = QUrl::fromPercentEncoding(reg.cap(1).toUtf8()).trimmed();
-        }
-        else if (value.contains(QRegExp("filename\\s*=", Qt::CaseInsensitive))) {
-            QRegExp reg("filename\\s*=([^;]*)", Qt::CaseInsensitive);
-            reg.indexIn(value);
-            path = reg.cap(1).trimmed();
-
-            if (path.startsWith(QLatin1Char('"')) && path.endsWith(QLatin1Char('"'))) {
-                path = path.mid(1, path.length() - 2);
-            }
-        }
-    }
+    QString path = parseContentDisposition(reply->rawHeader("Content-Disposition"));
 
     if (path.isEmpty()) {
         path = reply->url().path();
