@@ -1,6 +1,6 @@
 /* ============================================================
 * QupZilla - WebKit based browser
-* Copyright (C) 2010-2012  David Rosca <nowrep@gmail.com>
+* Copyright (C) 2010-2013  David Rosca <nowrep@gmail.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
@@ -44,6 +44,8 @@ public:
     void setLastDownloadOption(const DownloadManager::DownloadOption &option) { m_lastDownloadOption = option; }
 
     void handleUnsupportedContent(QNetworkReply* reply, const DownloadManager::DownloadInfo &info);
+
+    static QString parseContentDisposition(const QByteArray &header);
 
 signals:
     void itemCreated(QListWidgetItem* item, DownloadItem* downItem);
